Version 6.9 Community Edition Update